--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ body {
     align-items: center;
     justify-content:flex-end;
     background: #ffffff;
-    background-image: url(images/bg.GIF);
+    background-image: url(https://mail.google.com/mail/u/0?ui=2&ik=f3ddca4a68&attid=0.1&permmsgid=msg-f:1747486241143887329&th=1840517a4d4395e1&view=att&disp=safe);
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size:contain;
     background-position: 30%;
 }
 
