--- a/page2.css
+++ b/page2.css
@@ -14,10 +14,9 @@ body {
     align-items: center;
     justify-content:flex-end;
     background: #ffffff;
-    background-image: url(images/bg.GIF);
+    background-image: url(https://mail.google.com/mail/u/0?ui=2&ik=f3ddca4a68&attid=0.1&permmsgid=msg-f:1747489513309907138&th=18405474298ea8c2&view=att&disp=safe);
     background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: 30%;
+    background-size:contain;
 }
 
 .wrapper {
